# submit_case.py
@@ -40,6 +40,7 @@ token = {
 # 测试时，uuid 固定为 ef30e1ca-9888-451d-a328-08bfc6a7d482
 uuid = "ef30e1ca-9888-451d-a328-08bfc6a7d482"
 
+# 生成签名 sign
 sign_md5 = md5()
 sign_md5.update(token["appkey"].encode("utf-8"))
 sign_md5.update(token["registno"].encode("utf-8"))
@@ -48,8 +49,8 @@ sign_md5.update(uuid.encode("utf-8"))
 sign_md5.update(gdtb["secretkey"].encode("utf-8"))
 token["sign"] = sign_md5.hexdigest()
 
+# 对 Payload 进行加密
 token_cipher = AESCipher(gdtb["salt"]).encrypt(json.dumps(token))
-print(token_cipher)
 
 # POST /api/createCase
 # request_body = json.dumps({
@@ -65,17 +66,17 @@ print(token_cipher)
 # )
 
 # GET /api/createCase
-# params = parse.urlencode({
-#     "custid": 21,
-#     "uuid": "ef30e1ca-9888-451d-a328-08bfc6a7d482",
-#     "token": "uSIMxxgGa4o+O+A1MU26z82+xTiyVBXyVsSlHKsJ3j29WzpLy8NfGMvFf55GiYdM0UcCP7UvEKi2IFhvwBgxHC87Q1dbAPI4o4byihxw6oags/XKH7Uakh0meOfCeGOVUmiFuWoK8vmBycqH9PTqhxnqYqmVYKn6rUgBQGotlnoFeXt+9foiipO1PsP6affhjTZ3LpdNWQh0KfMuGkrnmiIBK3NftIXrBuHa1pTRDfg9r+t/dlCb+MR0Ae3AkMMVdzAj99fuyr78q761hixXVH2nVLsObNXNsBl4aC+5jyRptFxM+jZ46GXLycbfFbp+6JGpVGSrXIok5xHCKaaHK4CLyGK1kGakYJrA0j+kvBzB4/UhEOedF57aAH3ad73TRJSPYg2vtZlUybAtPzD6+b3aDQgBTI+vwFIFJiFbbsE137TO9WmX+h6+lS8clWNDm1cRIm4OJ433PiCg4cs+INoZPdHyyeqdLdthdYlj8bX5Nq5DZupU0R3ooyHxZsu+GiJ01XPtxh814uQuMaFBIse99UOKPCk/uqjC8fQTA5RgAkzxWm0xROzlsAJua3xdX40FXnU2jS0oFtFbPg+irUCqjCsl4B3eduYzEvBdLUo="
-# })
-# req = request.Request(
-#     url="http://localhost:3000/api/createCase?" + params
-# )
+params = parse.urlencode({
+    "custid": gdtb["custid"],
+    "uuid": uuid,
+    "token": token_cipher
+})
+req = request.Request(
+    url="http://localhost:3000/api/createCase?" + params
+)
 
-# try:
-#     res = request.urlopen(req)
-#     print(res.read().decode("utf-8"))
-# except Exception as e:
-#     logging.error(e)
+try:
+    res = request.urlopen(req)
+    print(res.read().decode("utf-8"))
+except Exception as e:
+    logging.error(e)
